# money_tracker

backend/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: config.py  main.py
backend/api/routers/: __init__.py  auth.py  calculate.py  transaction.py
backend/api/schemas/: auth.py
backend/api/utils/: gemini.py
backend/api/utils/calculations/: get_sum.py
backend/app/: main.py
backend/app/routers/: __init__.py  auth.py  calculate.py  transaction.py
backend/app/schemas/: calculate.py  transaction.py
backend/app/utils/: gemini.py  security.py
backend/app/utils/calculations/: get_money.py  get_sum.py
backend/db/: data.db  db.py  get_db.py
backend/db/models/: __init__.py  transaction.py  user.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  firebase.js  index.css
frontend/src/api/: capitalizeFirstLatter.js
frontend/src/components/: AddEntryModal.jsx  DashboardSkeleton.jsx  EditEntryModal.jsx  EditEntryModalContent.jsx  Header.jsx  MobileNav.jsx  ModalElement.jsx  ProfileButton.jsx  Sidebar.jsx  StatsCharts.jsx  SummaryCard.jsx  TransactionItem.jsx  TransactionList.jsx
frontend/src/contexts/: AuthContext.jsx  ModalContext.jsx  SettingsContext.jsx  TransactionsContext.jsx
frontend/src/data/: confirmData.js  sidebarElements.js
frontend/src/pages/: Dashboard.jsx  Home.jsx  LandingPage.jsx  Layout.jsx  Settings.jsx  SingIn.jsx
frontend/src/ui-components/: Button.jsx  Input.jsx  LabelLayout.jsx  Logo.jsx  Select.jsx
frontend/src/ui-components/icons/: GoogleIcon.jsx
